--- a/Controls/NarrativesListViewControl.xaml
+++ b/Controls/NarrativesListViewControl.xaml
@@ -17,6 +17,8 @@
     mc:Ignorable="d">
 
     <UserControl.Resources>
+        <converters:InvertBoolConverter x:Key="InvertBoolConverter"/>
+        <converters:ColourConverter x:Key="myColourConverter"/>
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <converters:StringFormatConverter x:Key="StringFormatConverter"/>
         <converters:ValueFormatConverter x:Key="ValueFormatConverter"/>
@@ -40,31 +42,95 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.7*"/>
-            <ColumnDefinition Width="0.3*"/>
-            <ColumnDefinition Width="120"/>
+            <ColumnDefinition Width="0.9*"/>
+            <ColumnDefinition Width="0.2*"/>
+            <ColumnDefinition Width="0.2*"/>
+            <ColumnDefinition Width="60"/>
             </Grid.ColumnDefinitions>
-        
-        
-        
-        <RichTextBlock  Grid.Row="0" Grid.Column="0" Margin="10,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" >
-            <Paragraph TextAlignment="Left" >
-                <Run l:Uids.Uid="NarrativesLV_Name" FontSize="12" FontStyle="Italic" />
-            </Paragraph>
-            <Paragraph TextAlignment="Left">
-                <Run l:Uids.Uid="NarrativesLV_Note" FontSize="12" FontStyle="Italic" />
-            </Paragraph>
-        </RichTextBlock>
-        <RichTextBlock   Grid.Row="0" Grid.Column="1" Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Right" >
-            <Paragraph TextAlignment="Right" >
-                <Run l:Uids.Uid="NarrativesLV_MarketValue" FontSize="12" FontStyle="Italic" />
-            </Paragraph>
-        </RichTextBlock>
-        
+       
+        <StackPanel Grid.Row="0" Grid.Column="0" Margin="10,0,0,5" VerticalAlignment="Bottom">
+            <local:ColumnHeaderButton
+                x:Name="NameHeader"
+                l:Uids.Uid="NarrativesLV_Name" 
+                IsEnabled="{Binding IsExtendedView , Converter={StaticResource InvertBoolConverter}}"
+                Margin="0,0,0,0"
+                FontSize="12"
+                FontStyle="Italic"
+                VerticalAlignment="Bottom"
+                HorizontalTextAlignment="Left"
+                PointerHoverColor="Goldenrod"
+                Group="{Binding SortGroup}"
+                Command="{Binding SortOnNameNarrCommand}"
+                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"
+                />
+        </StackPanel>
 
-        <Rectangle Grid.Row="1" Grid.ColumnSpan="3" Fill="#eebc3f" Height="2" Margin="5,0,8,0"/>
+        <StackPanel Grid.Row="0" Grid.Column="1" Margin="0,0,0,5" VerticalAlignment="Bottom">
+            <local:ColumnHeaderButton
+                x:Name="CostBaseHeader"
+                l:Uids.Uid="AssetsLV_MarketValue" 
+                IsEnabled="{Binding IsExtendedView , Converter={StaticResource InvertBoolConverter}}" 
+                Margin="0,0,0,0"
+                FontSize="12"
+                FontStyle="Italic"
+                VerticalAlignment="Bottom"
+                HorizontalTextAlignment="Right"
+                PointerHoverColor="Goldenrod"
+                SortingOrder="Descending"
+                Group="{Binding SortGroup}"
+                Command="{Binding SortOnCostBaseNarrCommand}"
+                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"
+                />
+            <local:ColumnHeaderButton
+                x:Name="MarketValueHeader"
+                l:Uids.Uid="AssetsLV_CostBase" 
+                IsEnabled="{Binding IsExtendedView , Converter={StaticResource InvertBoolConverter}}" 
+                Margin="0,0,0,0"
+                FontSize="12"
+                FontStyle="Italic"
+                VerticalAlignment="Bottom"
+                HorizontalTextAlignment="Right"
+                PointerHoverColor="Goldenrod"
+                Group="{Binding SortGroup}"
+                Command="{Binding SortOnMarketValueNarrCommand}"
+                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"
+                />
+        </StackPanel>
+        <StackPanel Grid.Row="0" Grid.Column="2" Margin="0,0,0,5" VerticalAlignment="Bottom">
 
-        <ListView x:Name="NarrativesListView" Grid.Row="2" Grid.ColumnSpan="3" x:FieldModifier="public" ItemsSource="{Binding _NarrativeService.ListNarratives}" BorderBrush="Transparent" BorderThickness="1"                              
+            <local:ColumnHeaderButton
+                x:Name="PnlHeader"
+                l:Uids.Uid="AssetsLV_ProfitLoss" 
+                IsEnabled="{Binding IsExtendedView , Converter={StaticResource InvertBoolConverter}}" 
+                Margin="0,0,0,0"
+                FontSize="12"
+                FontStyle="Italic"
+                VerticalAlignment="Bottom"
+                HorizontalTextAlignment="Right"
+                PointerHoverColor="Goldenrod"
+                Group="{Binding SortGroup}"
+                Command="{Binding SortOnPnLNarrCommand}"
+                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"
+                />
+            <local:ColumnHeaderButton 
+                x:Name="PnlPercHeader"
+                l:Uids.Uid="AssetsLV_ProfitLossPerc" 
+                IsEnabled="{Binding IsExtendedView , Converter={StaticResource InvertBoolConverter}}" 
+                Margin="0,0,0,0"
+                FontSize="12"
+                FontStyle="Italic"
+                VerticalAlignment="Bottom"
+                HorizontalTextAlignment="Right"
+                PointerHoverColor="Goldenrod"
+                Group="{Binding SortGroup}"
+                Command="{Binding SortOnPnLPercNarrCommand}"
+                CommandParameter="{Binding Path=SortingOrder, RelativeSource={RelativeSource Self}}"
+                />
+        </StackPanel>
+
+        <Rectangle Grid.Row="1" Grid.ColumnSpan="4" Fill="#eebc3f" Height="2" Margin="5,0,8,0"/>
+
+        <ListView x:Name="NarrativesListView" Grid.Row="2" Grid.ColumnSpan="4" x:FieldModifier="public" ItemsSource="{Binding _narrativeService.ListNarratives}" BorderBrush="Transparent" BorderThickness="1"                              
                         IsItemClickEnabled="True" SelectionMode="Single" toolkit:ScrollBarExtensions.KeepVerticalExpanded="{Binding IsScrollBarsExpanded}"
                   ui:ListViewExtensions.Command="{Binding NarrativeItemClickedCommand}" SizeChanged="ListView_SizeChanged"
                         ItemContainerStyle="{StaticResource HorizontalSwipe}" ScrollViewer.VerticalScrollBarVisibility="Visible"
@@ -83,7 +149,8 @@
                                     <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="0.9*"/>
                                             <ColumnDefinition Width="0.2*"/>
-                                            <ColumnDefinition Width="120"/>
+                                            <ColumnDefinition Width="0.2*"/>
+                                            <ColumnDefinition Width="70"/>
                                     </Grid.ColumnDefinitions>
                                         
                                         <TextBlock x:Name="proxy" Text="proxy" helpers:AncestorSource.AncestorType="ListView" Visibility="Collapsed" />
@@ -122,18 +189,38 @@
                                             </RelativePanel>
                                         </Border>
 
+                                        <Border Grid.Column="1"  Margin="5,0,0,0"  VerticalAlignment="Center" HorizontalAlignment="Stretch" >
+                                            <RelativePanel HorizontalAlignment="Right">
+                                                <TextBlock Name="txtMarketValue" 
+                                                   Text="{Binding TotalValue, 
+                                                       Converter={StaticResource ValueFormatConverter}, 
+                                                       ConverterParameter='{}$ {0:N0}'}" 
+                                                   FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
+                                                <TextBlock Name="txtCostBase" 
+                                                   Text="{Binding CostBase, 
+                                                       Converter={StaticResource ValueFormatConverter}, 
+                                                       ConverterParameter='{}$ {0:N0}'}" 
+                                                   RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtMarketValue" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" TextAlignment="Right"/>
+                                            </RelativePanel>
+                                        </Border>
 
-                                        <Border Grid.Column="1"  Margin="0" VerticalAlignment="Center" HorizontalAlignment="Right" >
-                                            <RelativePanel>
-                                                <TextBlock Name="txtValue" 
-                                                    Text="{Binding TotalValue, 
-                                                        Converter={StaticResource ValueFormatConverter}, 
-                                                        ConverterParameter='{}$ {0:N0}'}" 
-                                                    FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" TextWrapping="Wrap" TextAlignment="Right" />
+                                        <Border Grid.Column="2"  Margin="5,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Stretch"  >
+                                            <RelativePanel HorizontalAlignment="Right">
+                                                <TextBlock Name="txtProfitLoss" 
+                                           Text="{Binding ProfitLoss, 
+                                               Converter={StaticResource ValueFormatConverter}, 
+                                               ConverterParameter='{}$ {0:N0}'}"  
+                                           FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}"  RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
+                                                <TextBlock Name="txtProfitLossPerc" 
+                                           Text="{Binding ProfitLossPerc, 
+                                               Converter={StaticResource StringFormatConverter}, 
+                                               ConverterParameter='{}{0:0.00} %'}" 
+                                           RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtProfitLoss" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" TextAlignment="Right"
+                                           Foreground="{Binding ProfitLossPerc, Converter={StaticResource myColourConverter}}"/>
                                             </RelativePanel>
                                         </Border>
                                     </Grid>
-                                    <RelativePanel HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
+                                    <RelativePanel Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
                                         <CommandBar x:Name="HoverCommandBar" Visibility="{Binding DataContext.DataContext.IsExtendedView, ElementName=proxy, Converter={StaticResource BoolToVisibilityConverter}}" 
                                                     IsSticky="False" Background="Transparent" IsOpen="False" DefaultLabelPosition="Right"  >
                                             <CommandBar.SecondaryCommands>
