--- a/Controls/ColumnHeaderButton.xaml
+++ b/Controls/ColumnHeaderButton.xaml
@@ -78,7 +78,7 @@
             VerticalAlignment="Stretch"
             Margin="0,0,0,0"
             Opacity="0.4"
-            Click="btn_Click"
+            Click="Btn_Click"
             Command="{Binding Command, ElementName=Root, Mode=OneWay}"
             CommandParameter="{Binding CommandParameter, ElementName=Root, Mode=OneWay}"
             IsEnabled="{Binding IsEnabled, ElementName=Root, Mode=TwoWay}"
